Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9118

Failed to build MOFED 3.4-1.0.0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      + make -j4 -s
      Making all in .
      In file included from /tmp/rpmbuild-lustre-jenkins-2HDIMGOt/BUILD/lustre-2.9.52_82_gb2d45e0/libcfs/include/libcfs/linux/libcfs.h:85:0,
                       from /tmp/rpmbuild-lustre-jenkins-2HDIMGOt/BUILD/lustre-2.9.52_82_gb2d45e0/libcfs/include/libcfs/libcfs.h:37,
                       from /tmp/rpmbuild-lustre-jenkins-2HDIMGOt/BUILD/lustre-2.9.52_82_gb2d45e0/lnet/klnds/o2iblnd/o2iblnd.h:77,
                       from /tmp/rpmbuild-lustre-jenkins-2HDIMGOt/BUILD/lustre-2.9.52_82_gb2d45e0/lnet/klnds/o2iblnd/o2iblnd.c:38:
      /tmp/rpmbuild-lustre-jenkins-2HDIMGOt/BUILD/lustre-2.9.52_82_gb2d45e0/libcfs/include/libcfs/linux/linux-time.h:149:19: error: redefinition of 'ktime_get_real_ns'
       static inline u64 ktime_get_real_ns(void)
                         ^
      In file included from /var/lib/jenkins/workspace/lustre-reviews-ib/arch/x86_64/build_type/client/distro/sles12/ib_stack/mlx/BUILD/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/linux/compat-2.6.h:82:0,
                       from <command-line>:0:
      /var/lib/jenkins/workspace/lustre-reviews-ib/arch/x86_64/build_type/client/distro/sles12/ib_stack/mlx/BUILD/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/linux/compat-3.17.h:12:19: note: previous definition of 'ktime_get_real_ns' was here
       static inline u64 ktime_get_real_ns(void) {
                         ^
      

            simmonsja James A Simmons
            mdiep Minh Diep - TLC
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: